MDEV-4986: GTID - do not do on-disk update of master.info after every event group

This was actually implemented as part of MDEV-4506, parallel replication.
Unfortunately, one of the conditionals was reversed. So fsync of master.info
was disabled in non-gtid mode, instead of in gtid mode.

So fix the conditional to be correct.